- Fixed triple WATCH reply bug (#0000632)
- Added ZIP_LINKS support, no check in ./Config & configure yet.. you currently need to
  add -lz to IRCDLIBS in Makefile and enable it in include/config.h (and ofcourse set
  link::options::zip on both sides) -- Syzop.
- Removed unnecessary #ifdef blocks added by previous ZIP_LINKS patch
- Fixed some minor sending-1-byte-too-much bugs
- Made a STRIPBADWORDS_CHAN_ALWAYS option in include/config.h, if you define it badwords will
  always be stripped from all channels (regardless whether +G has been set or not) [default=disabled].
- Fix for error msgs flood at (at least) Linux 2.4.x and FreeBSD ("Transport endpoint is not connected"
  and "Socket is not connected"). (#0000677)
- Added makefiles to compile with zip links @ windows (zlib needed).
- Added '/stats zip' (Oper only, only usefull if ZIP_LINKS is defined).
- Fixed missing 's' flag in oper::snomask causing not receiving any server notices.
- Fixed a bug with channel mode +A that could prevent admins from joining. Reported 
  by Maxsus (#0000678)
- Added some missing stuff to the documentation. Reported by AngryWolf (#0000611)
- Started work on set::allow-userhost-change
- Fixed some typos in aliases/operstats.conf (#0000684) and added an aliases/cygnus.conf
  (#0000686), both reported by katsklaw
- Added better error messages support instead of just "Dead socket".
- Ahem... Fix for patch above (memleak).
- Fixed bug which made opers unable to do -a/-q (#0000654).
- Fixed bug in +q/+a list (/mode #chan q)
- Added set::snomask-on-connect
- Some tiny text fixes
- Fast badword replace is now enabled by default
- Added (optional) class::recvq so you can dynamically/per class set the recvq (flood control).
  CLIENT_FLOOD in config.h is used as a default value if recvq is not specified.
- Bugfix for crash with STRIPBADWORDS_CHAN_ALWAYS.
- Fixed bug in ipv6 + unknown connection flood.
- Don't encrypt SSL certificate by default @ win32.